# nyc-taxi-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yaml  download.py  pyproject.toml
src/api/: config.py  data.py  db.py  jobs.py  main.py  s3.py
tests/: conftest.py  test_ingest.py
