[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruda Porto Filgueiras", email = "r.filgueiras@apheris.com" }
]
requires-python = ">3.11"
dependencies = [
    "aioboto3>=15.5.0",
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.136.3",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-multipart>=0.0.30",
]

[project.scripts]
api = "api:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "pytest>=9.0.3",
]
